# dtr

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
python/dtc/: __init__.py
python/dtr/: __init__.py
src/: lib.rs  syntax.rs  textcompiler.rs
