[package]
name = "dtc"
version = "0.1.0"
edition = "2021"
description = "Dynamic Text Compiler"
authors = ["Naghi Naghiyev <naginagiyev03@gmail.com>"]
license = "MIT"

[lib]
name = "dtc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
regex = "1"
