[package]
name = "dtrlib"
version = "0.1.0"
edition = "2021"
description = "Dynamic Text Renderer"
authors = ["Naghi Naghiyev <naginagiyev03@gmail.com>"]
license = "MIT"

[lib]
name = "dtrlib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
regex = "1"
