[package]
name = "dtrlib"
version = "2.0.0"
edition = "2021"
description = "Dynamic Text Renderer"
authors = ["Naghi Naghiyev <naginagiyev03@gmail.com>"]
license = "MIT"

[lib]
name = "dtrlib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
regex = "1"
