[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "dtc"
version = "0.1.0"
description = "Dynamic Text Compiler"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/naginagiyev/dtc"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "dtc._dtc"