[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "dtrlib"
version = "2.0.0"
description = "Dynamic Text Renderer"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Naghi Naghiyev", email = "naginagiyev03@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/naginagiyev/dtr"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "dtr._dtr"    